Change default logging settings

--- a/logging.conf
+++ b/logging.conf
@@ -20,7 +20,7 @@ formatter=logfile
 [handler_stderr]
 class=StreamHandler
 # set to WARNING or higher in release
-level=NOTSET
+level=INFO
 args=(sys.stderr,)
 formatter=console
 
@@ -35,5 +35,5 @@ datefmt=%H:%M:%S
 format=%(asctime)s.%(msecs)03d;%(levelname)s;%(name)s;%(message)s
 
 [formatter_logfile]
-datefmt=
+#datefmt=
 format=%(asctime)s;%(levelname)s;%(name)s;%(message)s
